[gd_scene load_steps=15 format=2]

[ext_resource path="res://Engine/engine.gd" type="Script" id=1]
[ext_resource path="res://Textures/Misc/background(1366)-01.png" type="Texture" id=2]
[ext_resource path="res://font/NordRegular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://font/NordBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Engine/assets/save.png" type="Texture" id=5]
[ext_resource path="res://Engine/assets/reset.png" type="Texture" id=6]
[ext_resource path="res://Engine/assets/match_active.png" type="Texture" id=7]
[ext_resource path="res://Engine/assets/match_inactive.png" type="Texture" id=8]
[ext_resource path="res://Engine/assets/load.png" type="Texture" id=9]
[ext_resource path="res://Engine/assets/grid.png" type="Texture" id=10]
[ext_resource path="res://Engine/the_grid.gd" type="Script" id=11]
[ext_resource path="res://Engine/sol_grid.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
fallback/0 = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )

[node name="main" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 683.488, 385.133 )
texture = ExtResource( 2 )

[node name="dir path" type="LineEdit" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 527.0
margin_top = 83.0
margin_right = 729.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 2
size_flags_vertical = 2
text = "enter storage location"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="dir open" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 738.0
margin_top = 83.0
margin_right = 783.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "open"
flat = false
align = 1

[node name="sol" type="LineEdit" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 211.0
margin_top = 700.0
margin_right = 361.0
margin_bottom = 730.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Path to solution image"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="moves" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 683.0
margin_top = 198.0
margin_right = 733.0
margin_bottom = 298.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0549316, 0.523796, 0.9375, 1 )
text = "0"
align = 3
valign = 3
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sol enter" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 371.0
margin_top = 697.0
margin_right = 416.0
margin_bottom = 727.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Enter"
flat = false
align = 1

[node name="level description" type="TextEdit" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 927.0
margin_top = 43.0
margin_right = 1290.0
margin_bottom = 141.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true

[node name="level id" type="LineEdit" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 159.0
margin_top = 34.0
margin_right = 374.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Enter Level ID eg 2.12"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="max moves" type="LineEdit" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 159.0
margin_top = 104.0
margin_right = 374.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 2
size_flags_vertical = 2
text = "max moves"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="save" type="TextureButton" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 629.0
margin_top = 503.0
margin_right = 790.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )

[node name="reset" type="TextureButton" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 629.0
margin_top = 318.0
margin_right = 788.0
margin_bottom = 373.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )

[node name="match" type="TextureButton" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 628.0
margin_top = 407.0
margin_right = 787.0
margin_bottom = 462.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 8 )

[node name="load" type="TextureButton" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 630.0
margin_top = 603.0
margin_right = 791.0
margin_bottom = 660.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_disabled = ExtResource( 8 )

[node name="save path" type="FileDialog" parent="." index="13"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 100.0
margin_right = 1000.0
margin_bottom = 700.0
rect_min_size = Vector2( 400, 140 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Open a File"
resizable = false
dialog_hide_on_ok = true
mode_overrides_title = true
mode = 0
access = 0
filters = PoolStringArray(  )
show_hidden_files = true
current_dir = "res://"
current_file = ""
current_path = "res://"

[node name="load path" type="FileDialog" parent="." index="14"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 100.0
margin_right = 1000.0
margin_bottom = 700.0
rect_min_size = Vector2( 400, 140 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Open a File"
resizable = false
dialog_hide_on_ok = true
mode_overrides_title = true
mode = 0
access = 0
filters = PoolStringArray(  )
show_hidden_files = true
current_dir = "res://"
current_file = ""
current_path = "res://"

[node name="select solution" type="FileDialog" parent="." index="15"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 100.0
margin_right = 1000.0
margin_bottom = 700.0
rect_min_size = Vector2( 400, 140 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Open a File"
resizable = false
dialog_hide_on_ok = true
mode_overrides_title = true
mode = 0
access = 0
filters = PoolStringArray(  )
show_hidden_files = true
current_dir = "res://"
current_file = ""
current_path = "res://"

[node name="grid" type="TextureButton" parent="." index="16"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 631.0
margin_top = 696.0
margin_right = 792.0
margin_bottom = 753.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )

[node name="the_grid" type="Node2D" parent="." index="17"]

script = ExtResource( 11 )

[node name="sol_grid" type="Node2D" parent="." index="18"]

script = ExtResource( 12 )

[connection signal="pressed" from="dir open" to="." method="_on_dir_open_pressed"]

[connection signal="pressed" from="sol enter" to="." method="_on_sol_enter_pressed"]

[connection signal="pressed" from="save" to="." method="_on_save_pressed"]

[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]

[connection signal="pressed" from="match" to="." method="_on_match_pressed"]

[connection signal="pressed" from="load" to="." method="_on_load_pressed"]

[connection signal="file_selected" from="save path" to="." method="_on_save_path_file_selected"]

[connection signal="file_selected" from="load path" to="." method="_on_load_path_file_selected"]

[connection signal="file_selected" from="select solution" to="." method="_on_select_solution_file_selected"]

[connection signal="pressed" from="grid" to="." method="_on_grid_pressed"]


